--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@ display: flex;
     flex: 1;
 }
 
+.container {
+padding: 50px 0;
+}
+
 .row {
     width: 100%;
     max-width: 800px;
@@ -56,6 +60,13 @@ display: flex;
     align-items: center;
  }
 
+ section:nth-child(even) {
+    background-color: #f8f8f8;
+ }
+
+ .section__title {
+    margin-bottom: 20px;
+ }
  .nav__link--list {
     display: flex;
  }
@@ -94,9 +105,14 @@ display: flex;
         flex-direction: column;
     }
 
-.about-me__info--contatiner {
+    .about-me__info {
+        display: flex;
+        flex-direction: column;
+    }
+.about-me__info--container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
      align-items: center;
      min-width: 500px;
      margin: 0 auto;
@@ -127,4 +143,71 @@ margin-bottom: 16px;
 .about-me__info--para {
    font-size: 20px; 
    margin-bottom: 28px;
+}
+
+.about-me__link {
+    font-size: 20px;
+    text-decoration: none;
+    padding: 0 16px;
+}
+
+.about-me__link {
+    font-size: 20px;
+    text-decoration: none;
+    padding: 0 16px;
+}
+
+.about-me__img--container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.about-me__img {
+    width: 100%;
+}
+
+/* TECH STACK */
+
+.row {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.section__title {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.language__img {
+    width: 100%;
+    max-width: 80px;
+    height: auto;
+    display: block;
+}
+.language {
+    flex: 1 1 23%;
+    min-width: 23%;
+    padding: 10px;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.language__img--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+
+.language__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+    width: 100%;
 }
